--- a/styl/1-base/_body.styl
+++ b/styl/1-base/_body.styl
@@ -6,6 +6,7 @@ body
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+    z-index: -1
     path
       fill: $pie;
   h1
